<resources>
    <string name="app_name">Tesis</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Correo electronico</string>
    <string name="prompt_name">Nombre y apellido</string>
    <string name="prompt_profilename">Nombre del perfil</string>
    <string name="prompt_pass">Contraseña</string>
    <string name="prompt_pass2">Confirmar contraseña</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesion</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Este correo electronico no es valido</string>
    <string name="error_invalid_password">La contraseña ingresada no es valida</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es obligatorio</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_principal">Principal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Cerrar sesion</string>
    <string name="action_accept">Aceptar</string>
    <string name="action_cancel">Cancelar</string>

    <string-array name="opcionesCrearPerfil">
        <item>Sonido</item>
        <item>Vibracion</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_register">Registro</string>
    <string name="title_activity_demo">Bienvenidos</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
